--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	  <meta charset='UTF-8'>
 	  <title>Gif Viewer!</title>
-	  <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	  <link rel='stylesheet' href='assets/css/style.css'>
 	  <link rel='shortcut icon' type='image/png' href='favicon.png'>
 	  <meta name='viewport' content='width=device-width'>
@@ -31,6 +31,6 @@
 		</div>
 	</div>
 	</body>
-	<script type='text/javascript' src='assets/js/jquery-2.1.4.min.js'></script>
-	<script type='text/javascript' src='assets/js/app.js'></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script type='text/javascript' src='assets/js/app.js'></script>
 </html>
